fix: Changes image stretch from height to width [MWPW-133260]

--- a/less/components/consonant/cards/one-half.less
+++ b/less/components/consonant/cards/one-half.less
@@ -43,10 +43,11 @@
             border-top-left-radius: 4px;
             border-top-right-radius: 4px;
             text-align: center;
+            overflow: hidden;
 
             img {
-                height: 100%;
-                max-width: none;
+                width: 100%;
+                min-height: 100%;
             }
         }
 
